styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap');

body,
html {
  height: 100%;
}

body {
  overflow-x: hidden;
  overflow-y: auto;
  font-family: 'Plus Jakarta Sans', sans-serif;
}

@layer base {
  body {
    @apply mt-0 bg-[#F1F1F1] dark:bg-gray-900;
  }
}

@layer utilities {
  .no-scrollbar::-webkit-scrollbar {
    display: none;
  }

  .no-scrollbar {
    -ms-overflow-style: none;
    scrollbar-width: none;
    -webkit-overflow-scrolling: touch;
    touch-action: pan-x mandatory;
    scroll-snap-type: x mandatory;
  }
}

* {
  user-select: inherit;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
}

strong {
  font-weight: 600;
}

